--- a/WuWaPlanner/Views/Home/Home.resx
+++ b/WuWaPlanner/Views/Home/Home.resx
@@ -16,7 +16,7 @@
 		</value>
 	</resheader>
 	<data name="Title" xml:space="preserve">
-        <value>Hume Page</value>
+        <value>Home Page</value>
     </data>
 	<data name="Welcome" xml:space="preserve">
         <value>Welcome</value>
